FIX: Improved colour contrast in score table

--- a/src/styles/components/score-table.scss
+++ b/src/styles/components/score-table.scss
@@ -66,6 +66,7 @@
 
       #{$parent}__points {
         background-color: var(--colour-red);
+        color: var(--colour-text-inverse);
       }
     }
   }
